--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -229,7 +229,14 @@
     </div>
 </div>
 
+<link href="~/css/index.css" rel="stylesheet" asp-append-version="true" />
+<link rel="stylesheet" href ="~/css/pagination.css" asp-append-version="true" />
+
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/index.js" asp-append-version="true"></script>
+    <script src="~/js/pagination.js" asp-append-version="true"></script>
+    <script src="~/js/terminaldetails.js" asp-append-version="true"></script>
+    <script src="~/js/downloadcsv.js" asp-append-version="true"></script>
+    <script src="~/js/downloadxls.js" asp-append-version="true"></script>
 }
