Removed Sorting and its highlighter function to sorting.js file from index.js file

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -235,6 +235,7 @@
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/index.js" asp-append-version="true"></script>
+    <script src="~/js/sorting.js" asp-append-version="true"></script>
     <script src="~/js/pagination.js" asp-append-version="true"></script>
     <script src="~/js/terminaldetails.js" asp-append-version="true"></script>
     <script src="~/js/downloadcsv.js" asp-append-version="true"></script>
