Minor Chnages of removing unnecessary references, validation on Bank Name Dropdown - Null Value

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -28,7 +28,7 @@
                     </td>
                 </tr>
                 <tr style="border-color:white;">
-                    <td></td>
+                    <td id="allBankNameDateValidationMsg" class="text-danger fw-bold"></td>
                     <td id="dateCheckValidationError" class="text-danger fw-bold"</td>
                     <td></td>
                 </tr>
