Added Error and Exception handling

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -127,6 +127,7 @@
                 <button id="clearSearchFilter" class="btn btn-light" style="width: 80%; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);" onmousedown="this.style.boxShadow='none'" onmouseup="this.style.boxShadow='2px 2px 8px rgba(0, 0, 0, 0.2)'">Clear</button>
             </div>
         </div>
+        <span id="searchfilterValidationMsg" class="text-danger fw-bold ms-3"></span>
     </div>
 </div>
 
