Added a new Feature of Terminal Map with LeafLet and Google API

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/Spider_EMT.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootstrap-datepicker.min.css" />
     <link rel="stylesheet" href="~/css/toastr.min.css" />
+    <link rel="stylesheet" href="~/lib/leaflet/leaflet.css" />
 </head>
 <body>
    
@@ -27,6 +28,7 @@
     <script src="~/js/chart/drilldown.js"></script>
     <script src="~/js/chart/highcharts-3d.js"></script>
     <script src="~/js/chart/highcharts-more.js"></script>
+    <script src="~/lib/leaflet/leaflet.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
