--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -222,6 +222,10 @@
                     <div id="terminalDetailsFormColumn4" class="col-4"></div>
                 </form>
             </div>
+            <hr class="mx-2" />
+            <div>
+                <div id="mapContainer" class="mx-auto my-2 col-auto" style="height: 400px; width:95%;"></div>
+            </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" onclick="closeForm()">Close</button>
             </div>
