Added invalidateSize method, Customized tooltip, modified Ajax Async Call

--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -111,3 +111,11 @@
     height: 400px; 
     width: 98%;
 }
+
+.map-tooltip-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 400px;
+}
