--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -224,7 +224,7 @@
             </div>
             <hr class="mx-2" />
             <div>
-                <div id="mapContainer" class="mx-auto my-2 col-auto" ></div>
+                <div id="mapContainer" class="mx-auto mb-3 col-auto" ></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" onclick="closeForm()">Close</button>
