--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -114,8 +114,29 @@
 
 .map-tooltip-content {
     display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    font-family: Arial;
+}
+
+.map-bank-name {
+    font-weight: bold;
+    align-items: center;
+    border-bottom: 2px solid #000;
+    padding-bottom: 6px;
+    margin-bottom: 6px;
+    word-wrap: break-word;
+    font-family: Verdana;
+    font-size: 13px;
+}
+
+.map-address-info {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    max-width: 400px;
+    word-wrap: break-word;
+    font-family: Monaco;
+    letter-spacing: 1px;
+    font-size: 15px;
 }
