--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,3 +16,77 @@ html {
 body {
     margin-bottom: 60px;
 }
+
+.scrollableProfile {
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+/* CSS for alternating background colors within specific divs */
+#availableCategories .category:nth-child(odd),
+#availablePages .page:nth-child(odd) {
+    background-color: #17a2b8; /* First color */
+    color: #FFFFFF;
+}
+
+#availableCategories .category:nth-child(even),
+#availablePages .page:nth-child(even) {
+    background-color: #FFFFFF; /* Second color */
+    color: #17a2b8;
+}
+
+#selectedCategories .category:nth-child(odd),
+#selectedPages .page:nth-child(odd) {
+    background-color: #17a2b8; /* First color */
+    color: #FFFFFF;
+}
+
+#selectedCategories .category:nth-child(even),
+#selectedPages .page:nth-child(even) {
+    background-color: #FFFFFF; /* Second color */
+    color: #17a2b8;
+}
+
+/* Specific CSS for selected page divs within the designated areas */
+#availablePages .selected-page,
+#selectedPages .selected-page,
+#availableCategories .selected-category,
+#selectedCategories .selected-category {
+    position: relative;
+}
+
+#availablePages .selected-page::before,
+#selectedPages .selected-page::before,
+#availableCategories .selected-category::before,
+#selectedCategories .selected-category::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2); /* Overlay effect */
+    z-index: 1;
+}
+
+#availablePages .selected-page::after,
+#selectedPages .selected-page::after,
+#availableCategories .selected-category::after,
+#selectedCategories .selected-category::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5); /* Shadow effect */
+    z-index: 2;
+}
+
+#availablePages .selected-page:hover,
+#selectedPages .selected-page:hover,
+#availableCategories .selected-category:hover,
+#selectedCategories .selected-category:hover {
+    transform: scale(1.05); /* Zoom effect on hover */
+    transition: transform 0.3s ease;
+}
