--- a/Pages/AddUserProfile.cshtml
+++ b/Pages/AddUserProfile.cshtml
@@ -29,19 +29,19 @@
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <form method="post">
-        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:fit-content;">
+        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:fit-content;font-size:2rem;">
 
-            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
+            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;font-size:1.5rem;">
                 <div class="row pb-1 pt-2">
-                    <h2  style="color:#17a2b8; text-align:center">Create New Profile</h2>
+                    <h2 style="color:#17a2b8; text-align:center; font-size:2rem;">Create New Profile</h2>
                     <div>
                         <hr />
                     </div>
                 </div>
                 <div class="mb-3" style="">
-                    <label asp-for="userProfile.ProfileName"></label>
-                    <input asp-for="userProfile.ProfileName" class="form-control" value="" />
-                    <span asp-validation-for="userProfile.ProfileName" class="text-danger"></span>
+                    <label asp-for="userProfileData.ProfileName" class="form-label" style="font-size:1.2rem;"></label>
+                    <input id="profileNameInput" asp-for="userProfileData.ProfileName" class="form-control" style="font-size:1.2rem;" value="" />
+                    <span asp-validation-for="userProfileData.ProfileName" class="mt-auto text-danger fw-bold" style="font-size:1.2rem;"></span>
                 </div>
             </div>
 
@@ -51,10 +51,6 @@
                 <div class="ms-2 me-4 mt-2 mb-2" style="align-self:flex-start">
                     <h3>Available Pages</h3>
                     <div id="availablePages" class="scrollableProfile">
-                        @foreach (var eachpage in Model.Pages)
-                        {
-                            <div class="page">@eachpage.PageDescription</div>
-                        }
                     </div>
                 </div>
                 <!-- Buttons to Move Pages -->
@@ -65,21 +61,18 @@
                 <!-- Right Side -->
                 <div class="ms-2 me-4 mt-2 mb-2" style="align-self:flex-start">
                     <h3>Selected Pages</h3>
+                    <input type="hidden" id="selectedPagesJson" name="SelectedPagesJson" />
                     <div id="selectedPages" class="scrollableProfile">
                     </div>
                 </div>
             </div>
 
             <!-- Categories -->
-            <div class="container form-control border-2 mb-2" style="display: flex; justify-content:space-around;height:auto;">
+            <div class="container form-control border-2 mb-2" id="categoriesSection" style="display:none;justify-content:space-around;height:auto;">
                 <!-- Left Side -->
                 <div class="ms-2 me-4 mt-2 mb-2" style="align-self:flex-start">
                     <h3>Available Categories</h3>
                     <div id="availableCategories" class="scrollableProfile">
-                        @foreach (var category in Model.PageCategories)
-                        {
-                            <div class="category">@category.CategoryName</div>
-                        }
                     </div>
                 </div>
                 <!-- Buttons to Move Categories -->
@@ -90,6 +83,7 @@
                 <!-- Right Side -->
                 <div class="ms-2 me-4 mt-2 mb-2" style="align-self:flex-start">
                     <h3>Selected Categories</h3>
+                    <input type="hidden" id="selectedCategoriesJson" name="SelectedCategoriesJson" />
                     <div id="selectedCategories" class="scrollableProfile">
                     </div>
                 </div>
@@ -107,7 +101,6 @@
                     <div class="col-3"></div>
                 </div>
             </div>
-
         </div>
     </form>
 </div>
@@ -117,7 +110,6 @@
     <script src="~/js/userProfile.js" asp-append-version="true"></script>
     <script>
         // Serialize the pages and categories models into JSON objects
-        var availablePagesLst = @Html.Raw(Json.Serialize(Model.Pages));
-        var availableCategoriesLst = @Html.Raw(Json.Serialize(Model.PageCategories));
+        var availablePagesLst = @Html.Raw(Json.Serialize(Model.PagesData));
     </script>
 }
