--- a/Pages/Shared/_MainContentWrapper.cshtml
+++ b/Pages/Shared/_MainContentWrapper.cshtml
@@ -1,23 +1,23 @@
 ﻿<!-- Content Header (Page header) -->
 <div class="content-header">
-    <div class="container-fluid">
+    @* <div class="container-fluid">
         <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0">Dashboard</h1>
+            <div id="contentHeaderDiv" class="col-sm-6">
+                <h1 class="m-0"></h1>
             </div>
             <!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item">
-                        <a href="#">Home</a>
+                        <a href="#"></a>
                     </li>
-                    <li class="breadcrumb-item active">Dashboard v1</li>
+                    <li class="breadcrumb-item active"></li>
                 </ol>
             </div>
             <!-- /.col -->
         </div>
         <!-- /.row -->
-    </div>
+    </div> *@
     <!-- /.container-fluid -->
 </div>
 <!-- /.content-header -->
