--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -7,11 +7,11 @@
 <div class="sidebar">
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-            <img src="dist/img/Joe.jpeg" class="img-circle elevation-2" alt="User Image">
+        <div id="userImageDiv" class="image">
+            <img src="" class="img-circle elevation-2" alt="User Image">
         </div>
-        <div class="info">
-            <a href="#" class="d-block">Joe</a>
+        <div class="info" id="userNameDiv">
+            <a href="#" class="d-block"></a>
         </div>
     </div>
     <!-- SidebarSearch Form -->
@@ -72,6 +72,21 @@
                     </p>
                 </a>
                 <ul class="nav nav-treeview" id="dynamicPagesList">
+                    <!-- Dynamic Content will be loaded here -->
+                </ul>
+
+            </li>
+
+            <li class="nav-header">Categories View</li>
+
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="nav-icon fas fa-book"></i>
+                    <p>
+                        Categories <i class="fas fa-angle-left right"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview" id="dynamicCategoriesList">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
 
